@@ -38,7 +38,8 @@ env:
   - KERNEL=3.16.54 TESTSUITE=1 DPDK=1
   - KERNEL=3.16.54 DPDK_SHARED=1
   - KERNEL=3.16.54 DPDK_SHARED=1 OPTS="--enable-shared"
-  - KERNEL=4.17.14
+  - KERNEL=4.18.20
+  - KERNEL=4.17.19
   - KERNEL=4.16.18
   - KERNEL=4.15.18
   - KERNEL=4.14.63
