@@ -68,6 +68,7 @@ Q: What Linux kernel versions does each Open vSwitch release work with?
     2.8.x        3.10 to 4.12
     2.9.x        3.10 to 4.13
     2.10.x       3.10 to 4.17
+    2.11.x       3.10 to 4.18
     ============ ==============
 
     Open vSwitch userspace should also work with the Linux kernel module built
