@@ -617,7 +617,7 @@ OVS_TRAFFIC_VSWITCHD_STOP
 AT_CLEANUP
 
 AT_SETUP([datapath - ping over gre tunnel by simulated packets])
-OVS_CHECK_KERNEL(3, 10, 4, 17)
+OVS_CHECK_KERNEL(3, 10, 4, 18)
 
 OVS_TRAFFIC_VSWITCHD_START()
 AT_CHECK([ovs-vsctl -- set bridge br0 other-config:hwaddr=\"f2:ff:00:00:00:01\"])
@@ -667,7 +667,7 @@ OVS_TRAFFIC_VSWITCHD_STOP
 AT_CLEANUP
 
 AT_SETUP([datapath - ping over erspan v1 tunnel by simulated packets])
-OVS_CHECK_KERNEL(3, 10, 4, 17)
+OVS_CHECK_KERNEL(3, 10, 4, 18)
 
 OVS_TRAFFIC_VSWITCHD_START()
 AT_CHECK([ovs-vsctl -- set bridge br0 other-config:hwaddr=\"f2:ff:00:00:00:01\"])
@@ -719,7 +719,7 @@ OVS_TRAFFIC_VSWITCHD_STOP
 AT_CLEANUP
 
 AT_SETUP([datapath - ping over erspan v2 tunnel by simulated packets])
-OVS_CHECK_KERNEL(3, 10, 4, 17)
+OVS_CHECK_KERNEL(3, 10, 4, 18)
 
 OVS_TRAFFIC_VSWITCHD_START()
 AT_CHECK([ovs-vsctl -- set bridge br0 other-config:hwaddr=\"f2:ff:00:00:00:01\"])
@@ -772,7 +772,7 @@ OVS_TRAFFIC_VSWITCHD_STOP
 AT_CLEANUP
 
 AT_SETUP([datapath - ping over ip6erspan v1 tunnel by simulated packets])
-OVS_CHECK_KERNEL(3, 10, 4, 17)
+OVS_CHECK_KERNEL(3, 10, 4, 18)
 
 OVS_TRAFFIC_VSWITCHD_START()
 AT_CHECK([ovs-vsctl -- set bridge br0 other-config:hwaddr=\"f2:ff:00:00:00:01\"])
@@ -827,7 +827,7 @@ OVS_TRAFFIC_VSWITCHD_STOP
 AT_CLEANUP
 
 AT_SETUP([datapath - ping over ip6erspan v2 tunnel by simulated packets])
-OVS_CHECK_KERNEL(3, 10, 4, 17)
+OVS_CHECK_KERNEL(3, 10, 4, 18)
 
 OVS_TRAFFIC_VSWITCHD_START()
 AT_CHECK([ovs-vsctl -- set bridge br0 other-config:hwaddr=\"f2:ff:00:00:00:01\"])
@@ -1066,7 +1066,7 @@ dnl   ns1: connect to br0, with IP:10.1.1.2
 dnl   br-underlay: with IP: 172.31.1.100
 dnl   ns0: connect to br-underlay, with IP: 10.1.1.1
 AT_SETUP([datapath - truncate and output to gre tunnel by simulated packets])
-OVS_CHECK_KERNEL(3, 10, 4, 17)
+OVS_CHECK_KERNEL(3, 10, 4, 18)
 AT_SKIP_IF([test $HAVE_NC = no])
 OVS_TRAFFIC_VSWITCHD_START()
 
